--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+backcall==0.1.0
+decorator==4.4.0
 importlib-metadata==0.18
+ipykernel==5.1.1
+ipython==7.6.1
+ipython-genutils==0.2.0
 isort==4.3.21
+jedi==0.14.1
+jupyter-client==5.3.1
+jupyter-core==4.5.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 more-itertools==7.0.0
 packaging==19.0
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
 pluggy==0.12.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
 py==1.8.0
+Pygments==2.4.2
 pylint==2.3.1
 pyparsing==2.4.0
 pytest==4.6.3
+python-dateutil==2.8.0
+pyzmq==18.0.2
 six==1.12.0
+tornado==6.0.3
+traitlets==4.3.2
 typed-ast==1.4.0
 wcwidth==0.1.7
 wrapt==1.11.2
