--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+autopep8==1.4.4
 backcall==0.1.0
 decorator==4.4.0
+flatbuffers==1.11
 importlib-metadata==0.18
 ipykernel==5.1.1
 ipython==7.6.1
@@ -14,6 +16,7 @@ jupyter-core==4.5.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 more-itertools==7.0.0
+numpy==1.17.0
 packaging==19.0
 parso==0.5.1
 pexpect==4.7.0
@@ -22,6 +25,7 @@ pluggy==0.12.0
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 py==1.8.0
+pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.3.1
 pyparsing==2.4.0
