--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ scipy = "*"
 flatbuffers = "*"
 jupyter = "*"
 matplotlib = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
