remove bin files and add to git_ignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,9 @@ coverage.xml
 # Example notebook checkpoint
 example/.ipynb_checkpoints/
 
+# Example binary files
+example/test_db/document_binary/*
+
 # MacOS
 *.DS_Store
 
