update pipfiles with did deps

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pytest = "*"
 neo = "*"
 alchemy-mock = "*"
 did = {editable = true,path = "./../did-python"}
+sqlalchemy-utils = "*"
 
 [requires]
 python_version = "3.8"
