remove test binaries

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ example/.ipynb_checkpoints/
 
 # Example binary files
 example/test_db/document_binary/*
+example/binary_collections/*
 
 # MacOS
 *.DS_Store
